feat: implement batch loading in item service to avoid N+1